--- a/index.html
+++ b/index.html
@@ -23,7 +23,44 @@
     <div class="hero-image">
         <div class="hero-text">
             <h1>Süleyman && Öznur</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, expedita. Possimus nobis veritatis quia, reprehenderit soluta ad nemo aliquam enim!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Architecto, expedita. Possimus nobis veritatis quia, 
+                reprehenderit soluta ad nemo aliquam enim!</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="cardContent">
+            <img src="https://images.unsplash.com/photo-1501824466809-99dbdfbc08d8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
+            <h3>Card 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Atque inventore optio adipisci reiciendis doloremque iure 
+                hic nisi voluptatem earum sunt natus incidunt laudantium ea, 
+                assumenda quibusdam dolor corporis mollitia quae.</p>
+        </div>
+        <div class="cardContent">
+            <img src="https://images.unsplash.com/photo-1583507180315-97a07781ae72?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
+            <h3>Card 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Atque inventore optio adipisci reiciendis doloremque iure 
+                hic nisi voluptatem earum sunt natus incidunt laudantium ea, 
+                assumenda quibusdam dolor corporis mollitia quae.</p>
+        </div>
+        <div class="cardContent">
+            <img src="https://images.unsplash.com/photo-1613266997167-33ce01e190f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
+            <h3>Card 3</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Atque inventore optio adipisci reiciendis doloremque iure 
+                hic nisi voluptatem earum sunt natus incidunt laudantium ea, 
+                assumenda quibusdam dolor corporis mollitia quae.</p>
+        </div>
+        <div class="cardContent">
+            <img src="https://images.unsplash.com/photo-1547533257-5cc07b013944?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
+            <h3>Card 4</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Atque inventore optio adipisci reiciendis doloremque iure 
+                hic nisi voluptatem earum sunt natus incidunt laudantium ea, 
+                assumenda quibusdam dolor corporis mollitia quae.</p>
         </div>
     </div>
 
