--- a/index.html
+++ b/index.html
@@ -64,6 +64,31 @@
         </div>
     </div>
 
+    <form>
+        <div class="form">
+            <h3>Bizimle İletişime Geçin</h3>
+            <label>Ad</label>
+            <input type="text" name="firstmane" placeholder="Adınızı Giriniz...">
+            <label>Soyad</label>
+            <input type="text" name="lastmane" placeholder="Soyadınızı Giriniz...">
+            <label for="country">Ülke</label>
+            <select name="country" id="country">
+                <option value="tr">Türkçe</option>
+                <option value="en">England</option>
+                <option value="fr">Français</option>
+            </select>
+            <div class="buton">
+                <input type="submit" value="Gönder">
+            </div>
+        </div>
+    </form>
+
+    <div class="footer">
+        <h3>Front-End Web Developer</h3>
+    </div>
+
+
+
 
 </body>
 </html>
